src/modules/catalog/features/ui/ProductModal/ProductModal.module.scss
.root {
  @include overlay;
  display: flex;
  align-items: center;
  justify-content: center;
  z-index: 9999;
  backdrop-filter: blur(5px);
}

.modal {
  width: 60dvw;
  max-width: 1400px;
  max-height: 90vh;
  max-height: calc(var(--vh, 1vh) * 90);
  max-height: 90dvh;
  position: relative;
  overflow-y: auto;
  background: var(--white);
  border-radius: 5px;
  box-shadow: 0 10px 40px var(--opacity-colors-black-40);
  animation: slideUp 0.3s ease-out;
  @include scrollbar(3px, 3px);

  @include breakpoint(desktop-s) {
    width: 85dvw;
  }
}

.stickyFooter {
  position: sticky;
  bottom: -1px;
  display: flex;
  flex-wrap: wrap;
  align-items: center;
  justify-content: space-between;
  gap: 20px;
  padding: 20px;
  backdrop-filter: blur(20px);
  background: var(--white-blur);
  z-index: 10;

  @include breakpoint(mobile-m) {
    padding: 10px;
  }
}

.priceWrap {
  display: flex;
  align-items: baseline;
  gap: 6px;
  margin-left: 8dvw;

  @include breakpoint(mobile-m) {
    margin-left: 0;
  }
}

.priceLabel {
  font-size: 14px;
  color: var(--gray);
}

.priceValue {
  font-size: 20px;
  color: var(--black);
}

.priceUnit {
  font-size: 14px;
  color: var(--gray);
}

.closeBtn {
  position: sticky;
  justify-content: flex-end;
  top: 12px;
  padding-right: 12px;
  width: 100%;
  height: 24px;
  font-size: 24px;
}

.content {
  display: flex;

  flex-direction: row;
  padding: 40px 20px;
  gap: 20px;

  @include breakpoint(desktop-s) {
    padding: 20px;
  }

  @include breakpoint(mobile-m) {
    flex-direction: column;
  }
}

.imageBlock {
  position: relative;
  flex: 1;
  align-self: center;

  img,
  .imgSkeleton {
    width: 100%;
    border-radius: 12px;
    object-fit: contain;
  }

  @include breakpoint(mobile-m) {
    img,
    .imgSkeleton {
      max-height: 20vh;
      max-height: calc(var(--vh, 1vh) * 20);
      max-height: 20dvh;
    }
  }
}

.infoBlock {
  flex: 1;
  display: flex;
  flex-direction: column;
  justify-content: center;
  gap: 20px;

  @include breakpoint(desktop-s) {
    gap: 12px;
  }

  @include breakpoint(mobile-m) {
    width: 100%;
  }
}

.category {
  color: var(--gray);
  font-size: 14px;
}

.title,
.titleSkeleton {
  font-size: 22px;
  min-height: 55px;

  @include breakpoint(mobile-m) {
    font-size: 18px;
  }
}

.descriptionWrap {
  color: var(--dark-gray);
  line-height: 1.5;

  h4 {
    margin-bottom: 8px;
    font-size: 18px;
    color: var(--black);
  }

  div {
    font-size: 16px;

    p:not(:last-child) {
      margin-bottom: 8px;
    }
  }

  @include breakpoint(desktop-s) {
    h4 {
      font-size: 16px;
    }

    div {
      font-size: 14px;
    }
  }
}

.imgSkeleton,
.titleSkeleton {
  @include skeleton;
}

.titleSkeleton {
  border-radius: 4px;
}

.imgSkeleton {
  @include absolute($z-index: 10);
  inset: 0;
}

@keyframes slideUp {
  from {
    opacity: 0;
    transform: translateY(5dvw);
  }

  to {
    opacity: 1;
    transform: translateY(0);
  }
}

